fix: reader side menu, ARIA levels in TOC tree headings, aria-hidden on collapsed sections, list item containment (PR #670 Fixes #569 Fixes #672 Fixes #676)

--- a/src/renderer/assets/styles/reader-app.css
+++ b/src/renderer/assets/styles/reader-app.css
@@ -628,8 +628,7 @@ p.chapters_description {
 	font-size: 1.1rem;
 	font-weight: 600;
 	background-color: white;
-	cursor: pointer;
-  display:flex;
+	cursor: auto;
 
   & > span {
     flex: 1;
@@ -639,7 +638,7 @@ p.chapters_description {
     fill: rgb(59, 59, 59);
   }
 
-  &.active {
+  &.active > button {
     & svg {
       transform: rotate(90deg);
     }
